@@ -71,6 +71,9 @@ New in spot 2.6.2.dev (not yet released)
     This in turn caused "ltl2tgba -U -B" to not produce unambiguous
     automata.
 
+  - ltl2tgba --low now disables the "gf-guarantee" feature, as
+    documented.
+
 New in spot 2.6.2 (2018-09-28)
 
   Build:
